fix links via z-index

--- a/qatest/assets/habstw.css
+++ b/qatest/assets/habstw.css
@@ -8,6 +8,10 @@ body {
 	text-decoration: none;
 	color: black;
 }
+#content {
+	position: relative;
+	z-index: 2;
+}
 .answer {
 	display: inline-block;
 	margin-top: 20px;
@@ -28,6 +32,8 @@ body {
 .smallbox {
 	width: 30px;
 	height: 30px;
+	
+	z-index: 4;
 }
 .divbutt {	
 	line-height: 32px;
@@ -39,8 +45,7 @@ body {
 }
 .info-overlay {	
 	width: 100%;
-	height: 100%;
-	
+	height: 100%;	
 	font-size: 20pt;
 	
 	opacity: 0;
@@ -48,6 +53,10 @@ body {
 	-moz-transition: opacity 0.2s ease-out;
 	-ms-transition: opacity 0.2s ease-out;
 	transition: opacity 0.2s ease-out;
+		
+	top: 0px;
+	left: 100%;
+	z-index: 1;
 }
 .info-msg-top {
 	position: fixed;
@@ -70,9 +79,9 @@ body {
 	font-weight: bold;
 }
 .show.info-overlay {
-	top: 0px;
 	left: 0px;
 	opacity: 0.9;
+	z-index: 3;
 }
 .show.divbutt {
 	top: 10px;		
